snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
0cc7130c7cb0ab28767c4743b0a61cf405e36078b630d15e67b461fa7b990b2693e48c820d7fbff35d588e8c9e6b90b80ea844ede5beac638c29e4f9d60f7eab